<resources>
    <string name="app_name">RTC</string>

    <string name="action_settings">Exit</string>

    <string name="RestrauntType">Restaurant Type</string>
    <string name="RestrauntTaxCalculator">Restaurant Tax Calculator</string>
    <string name="Calculate">Calculate</string>
    <string name="BillAmount">Bill Amount</string>
    <string name="FB">Actual Bill</string>
    <string name="ST">Service Charge</string>
    <string name="SC">Service Tax</string>
    <string name="VT">VAT</string>
    <string name="AC">AC</string>
    <color name="blueish">#d7d3b0</color>
    <string name="NonAC">NonAc</string>

</resources>
