<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:icon="@drawable/ic_launcher"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/mainview">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RestrauntTaxCalculator"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:textSize="12pt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="35dp"
        android:textColor="#ff1f1a" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignEnd="@+id/textView1"
        android:id="@+id/T_1"
        android:weightSum="1"
        android:textColor="#ff1f1a" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/RestrauntType"
            android:id="@+id/textView2"
            android:layout_marginTop="24dp"
            android:textColor="#ff1f1a" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:id="@+id/Rtype"
            android:orientation="horizontal"
            android:textColor="#ff1f1a" >
            <RadioButton android:id="@+id/AC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AC"
                android:layout_marginLeft="5dp"
                android:onClick="onRadioButtonClicked"
                android:checked="false"
                android:textColor="#ff1f1a" />
            <RadioButton android:id="@+id/NonAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/NonAC"
                android:onClick="onRadioButtonClicked"
                android:checked="false"
                android:textColor="#ff1f1a" />
        </RadioGroup>

 </TableRow>

    <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:text="@string/BillAmount"
     android:id="@+id/BillAmount"
     android:layout_centerVertical="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
     android:layout_below="@id/T_1"
     android:layout_marginTop="22dp"
     android:textColor="#ff1f1a" />

 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/Calculate"
     android:id="@+id/button3"
     android:layout_below="@+id/BillAmount"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="30dp"
     android:textColor="#ff1f1a" />

 <TableLayout
     android:layout_width="match_parent"
     android:layout_below="@id/button3"
     android:orientation="horizontal"
     android:id="@+id/T_2"
     android:layout_alignParentBottom="true"
     android:layout_height="wrap_content"
     android:textColor="#ff1f1a" >

     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textColor="#ff1f1a" >

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/ST"
             android:layout_column="1"
             android:text="@string/ST"
             android:textColor="#ff1f1a" />

         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
             android:id="@+id/SC2"
             android:layout_column="6"
             android:textColor="#ff1f1a" />
     </TableRow>

     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/SC"
             android:id="@+id/SC"
             android:layout_column="1"
             android:textColor="#ff1f1a" />

         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
             android:id="@+id/ST2"
             android:layout_column="6"
             android:textColor="#ff1f1a" />
     </TableRow>

     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/VT"
             android:id="@+id/vt"
             android:layout_column="1"
             android:textColor="#ff1f1a" />

         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
             android:id="@+id/vt2"
             android:layout_column="6"
             android:textColor="#ff1f1a" />
     </TableRow>



 </TableLayout>

 <EditText
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:inputType="numberDecimal"
     android:ems="10"
     android:id="@+id/AmountInput"
     android:layout_alignBottom="@+id/BillAmount"
     android:layout_alignLeft="@+id/button3"
     android:layout_alignStart="@+id/button3"
     android:textColor="#ff1f1a" />


</RelativeLayout>
